@@ -222,6 +222,8 @@ General configuration
    * app.add_directive
    * app.add_role
    * app.add_generic_role
+   * image.data_uri
+   * image.nonlocal_uri
    * ref.term
    * ref.ref
    * ref.numref
